lib/open_ehr/parser/dadl.tt
require 'shared_token'

grammar DADL

  include SharedToken

  rule V_DADL_TEXT
    attr_vals / complex_object_block 
  end

  rule attr_vals
    attr_val (';'? attr_val)*
  end

  rule attr_val
    attr_id SYM_EQ object_block
  end

  rule attr_id
    V_ATTRIBUTE_IDENTIFIER white_space
  end

  rule object_block
    complex_object_block / primitive_object_block
  end

  rule complex_object_block
    single_attr_object_block
  / multiple_attr_object_block
  end

  rule multiple_attr_object_block
    type_identifier? untyped_multiple_attr_object_block
  end

  rule untyped_multiple_attr_object_block
    multiple_attr_object_block_head keyed_objects SYM_END_DBLOCK
  end

  rule multiple_attr_object_block_head
    SYM_START_DBLOCK
  end

  rule keyed_objects
    keyed_object+
  end

  rule keyed_object
    object_key SYM_EQ object_block
  end

  rule object_key
    '[' simple_value ']' white_space
  end

  rule single_attr_object_block
    type_identifier? untyped_single_attr_object_block
  end

  rule untyped_single_attr_object_block
    single_attr_object_complex_head attr_vals? SYM_END_DBLOCK
  end

  rule single_attr_object_complex_head
    SYM_START_DBLOCK
  end

  rule primitive_object_block
    type_identifier? untyped_primitive_object_block
  end

  rule untyped_primitive_object_block
    SYM_START_DBLOCK primitive_object_value SYM_END_DBLOCK
  end

  rule primitive_object_value
    term_code
  / simple_list_value
  / simple_value
  / simple_interval_value
  / term_code_list_value
  end

  rule simple_value
    string_value
  / integer_value
  / real_value
  / boolean_value
  / character_value
  / date_value
  / time_value
  / date_time_value
  / duration_value
  / uri_value
  end

  rule simple_list_value
    string_list_value
  / integer_list_value
  / real_list_value
  / boolean_list_value
  / character_list_value
  / date_list_value
  / time_list_value
  / date_time_list_value
  / duration_list_value
  end

  rule simple_interval_value
    integer_interval_value
  / real_interval_value
  / date_interval_value
  / time_interval_value
  / date_time_interval_value
  / duration_interval_value
  end

  rule term_code
    V_QUALIFIED_TERM_CODE_REF
  end

  rule term_code_list_value
    term_code (',' term_code)+
  / term_code ',' SYM_LIST_CONTINUE
  end

  rule uri_value
    V_URI
  end
end
